# AgentArena

./: .env.example  .gitignore  AGENT_SERVICE_README.md  AGENT_SERVICE_STATUS.md  AGENT_UI_FEATURES.md  BACKEND_REFACTORING.md  CANVAS_FEATURE.md  COMMANDS.md  CONTRIBUTING.md  DUAL_PROTOCOL_SETUP.md  ELEGANT_DESIGN.md  ENV_SETUP.md  FINAL_AGENT_UI.md  FINAL_SUMMARY.md  FRONTEND_MCP_SETUP.md  HTTPS_SETUP.md  IMPROVED_DESIGN.md  LOADING_INDICATORS.md  MCP_FILESYSTEM_SETUP.md  MCP_INTEGRATION.md  MIGRATION_NOTES.md  PUSH_INSTRUCTIONS.md  QUICK_REFERENCE.md  README.md  SEARCH_AGENT_CHANGES.md  SEARCH_AGENT_SETUP.md  SERVER_SETUP.md  STREAMING_COMPLETE.md  STREAMING_EXAMPLE.md  STREAMING_IMPLEMENTATION.md  SYSTEM_OVERVIEW.md  TOOL_CALL_EXAMPLES.md  check_file.sh  check_status.sh  clear_cache.sh  crawl_iclr_reviewers.py  create_py312_env.sh  debug_stream.py  deploy.py  deploy.sh  (+47 more)
agent_service/: CONTRIBUTING.md  STREAMING_API.md  agent_main.py  bc_agent.py  chat_client.py  config.py  mcp_manager.py  prompter.py  pyproject.toml  repo_agent.py  requirements.txt  search_agent.py  start.sh  swe_agent.py  tau_agent.py  tool_handler.py  tool_prompt.py  utils.py
agent_service/agent/: core.py  simple_wrapper.py  tools.py  (+1 more)
backend/: main.py  pyproject.toml  requirements.txt  stream_manager.py
runtime_service/: README.md  bc_env.py  bc_server.py  get_swe.py  kill_swebench_server.sh  main.py  pyproject.toml  repo_env.py  repo_server.py  runtime_server.py  simple_test.py  start_server.sh  swebench_env.py  swebench_env_remote.py  swebench_env_server.py  tau_env.py  test_remote_env.py  test_runtime.py
(+101 files in other folders)
