[project]
name = "runtime-service"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.10"
dependencies = [
    "datasets>=2.14.0",
    "fastapi>=0.104.0",
    "httpx>=0.25.0",
    "litellm>=1.80.10",
    "numpy>=1.24.0",
    "pydantic>=2.0.0",
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "uvicorn[standard]>=0.24.0",
]
